Fixed a bug in the calculator section where text couldn't be copied due to the lack of a z-index

--- a/src/scss/blocks/_calculator.scss
+++ b/src/scss/blocks/_calculator.scss
@@ -12,6 +12,7 @@
         top: 0;
         width: 580px;
         height: 638px;
+        z-index: -1;
         @include tablet {
             top: 20%;
             width: 510px;
